--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   js: ^0.6.3
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +61,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
+    - assets/images/manzu_all/
+    - assets/images/ms_all/
+    - assets/images/pinzu_all/
+    - assets/images/sozu_all/
+    - assets/images/tupai_all/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -87,3 +92,7 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Hkkaikk
+      fonts:
+        - asset: assets/fonts/hkkaikk.ttf
