--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images.zip
+    - assets/images.bin
     - assets/images/
     - assets/sounds/
 
