--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   archive: ^3.1.2
   web_socket_channel: ^2.1.0
   soundpool: ^2.1.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
